--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ a {
 
 .header {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 
 
@@ -58,5 +58,6 @@ button {
 .hero {
     display: flex;
     gap: 20px;
+    justify-content: space-around;
 
 }
